--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
+	"$schema": "https://getcomposer.org/schema.json",
 	"name": "joaofabioma/pss_02_2025_seplag",
 	"type": "project",
+	"description": "Projeto para atender requisito de vaga seplag.",
 	"homepage": "https://github.com/joaofabioma/pss_02_2025_seplag",
 	"require": {
 		"php": ">=8.2",
@@ -10,12 +12,17 @@
 		"psr/http-server-handler": "^1.0"
 	},
 	"scripts": {
-		"start": "php -S localhost:8585 ./public/index.php"
+		"start": "php -S localhost:8585 ./public/index.php",
+		"post-update-cmd": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ]
 	},
 	"keywords": [
 		"php",
 		"framework",
-		"toolchain"
+		"seplag",
+		"pss",
+		"seletivo_2025"
 	],
 	"license": "MIT",
 	"autoload": {
@@ -30,6 +37,7 @@
 		}
 	],
 	"config": {
-        "process-timeout": 0
+        "process-timeout": 0,
+        "optimize-autoloader": true
     }
 }
