--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,25 @@
 		"firebase/php-jwt": "^6.0",
 		"vlucas/phpdotenv": "^5.6",
 		"symfony/http-foundation": "^7.2",
-		"psr/http-server-handler": "^1.0"
+		"psr/http-server-handler": "^1.0",
+		"doctrine/orm": "^3.3",
+		"doctrine/dbal": "^3.8",
+		"symfony/cache": "^6.0 || ^7.0",
+    	"doctrine/cache": "^2.2"
+	},
+	"require-dev": {
+    	"composer/composer": "^2.8"
 	},
 	"scripts": {
-		"start": "php -S localhost:8585 ./public/index.php",
+		"start": "php -S localhost:8585 -t ./public",
 		"post-update-cmd": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ]
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
+			"PSS0225Seplag\\Database\\ComposerScripts::setupDatabase"
+        ],
+		"db-setup": "PSS0225Seplag\\Database\\ComposerScripts::setupDatabase",
+        "db-create": "PSS0225Seplag\\Database\\ComposerScripts::createSchema",
+        "db-update": "PSS0225Seplag\\Database\\ComposerScripts::updateSchema",
+        "db-drop": "PSS0225Seplag\\Database\\ComposerScripts::dropSchema"
 	},
 	"keywords": [
 		"php",
