minio nao existe para pho, usar aws no composer

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 		"doctrine/orm": "^3.3",
 		"doctrine/dbal": "^3.8",
 		"symfony/cache": "^6.0 || ^7.0",
-    	"doctrine/cache": "^2.2"
+    	"doctrine/cache": "^2.2",
+		"aws/aws-sdk-php": "^3.342"
 	},
 	"require-dev": {
     	"composer/composer": "^2.8"
